# jim-mini

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  jim.db-shm  jim.db-wal  pyproject.toml
.github/workflows/: desktop-release.yml
app/: README.md  package-lock.json  package.json
app/src/: App.tsx  api.ts  store.tsx  styles.css
app/src/screens/: Checkin.tsx  Coach.tsx  Home.tsx  Monitor.tsx  Onboarding.tsx  Settings.tsx
docs/: early-warning-escalation.md  guardian-internals.md  hipaa-baa.md  releasing.md  tandem.md  terms.md
docs/desktop/: build.py
docs/screens/: build.py
docs/watch/: build.py
jim/: api.py  app_connectors.py  auth.py  catalog.py  cloud.py  coach.py  conditions.py  db.py  earlywarning.py  escalation.py  family.py  guardian.py  guidance.py  i18n.py  life.py  llm.py  models.py  pdi_client.py  qrme_client.py  research.py  robotics.py  seed.py  social.py  terms.py
jim/tests/: conftest.py  test_access_log.py  test_adult_tandem_safety.py  test_ambient.py  test_app_connectors.py  test_auth.py  test_catalog.py  test_claims.py  test_cloud.py  test_companion.py  test_continuity.py  test_custody_viewer.py  test_emergency.py  test_escalation_tree.py  test_extras.py  test_family_controls.py  test_first_aid.py  test_forecasts.py  test_improve.py  test_language_provenance.py  test_life.py  test_medical_id_qr.py  test_model_choice.py  test_parent_setup.py  test_pdi_tandem.py  test_research.py  test_robot_first_aid.py  test_robots.py  test_sensitivity_baseline.py  test_social.py  test_starter_specialists.py  test_tandem.py  test_tandem_custody.py  test_tandem_starters.py  test_terms.py  test_waiver.py
native/: README.md
native/android/: README.md  settings.gradle.kts
native/android/app/: build.gradle.kts
native/android/app/src/main/: AndroidManifest.xml
native/android/app/src/main/res/values/: themes.xml
native/ios/: README.md  project.yml
native/ios/Sources/: ApiClient.swift  AppState.swift  JimGuardianApp.swift  L10n.swift  Theme.swift
native/ios/Sources/Views/: CareView.swift  CheckinView.swift  CoachView.swift  ConnectView.swift  CustodyView.swift  FamilyView.swift  FirstAidView.swift  ImproveView.swift  LifeView.swift  MonitorView.swift  OverviewView.swift  SafetyView.swift  WelcomeView.swift
native/windows/: ApiClient.cs  App.xaml  App.xaml.cs  AppState.cs  JimGuardian.csproj  L10n.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest
native/windows/Views/: CheckinPage.xaml  CheckinPage.xaml.cs  CoachPage.xaml  CoachPage.xaml.cs  ConnectPage.xaml  ConnectPage.xaml.cs  CustodyPage.xaml  CustodyPage.xaml.cs  FamilyPage.xaml  FamilyPage.xaml.cs  LifePage.xaml  LifePage.xaml.cs  MonitorPage.xaml  MonitorPage.xaml.cs  OverviewPage.xaml  OverviewPage.xaml.cs  SafetyPage.xaml  SafetyPage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs  WelcomePage.xaml  WelcomePage.xaml.cs
(+6 files in other folders)
