[project]
name = "jim-mini"
version = "0.1.0"
description = "JIM-mini / Guardian — networked responsive personal guidance system for known conditions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic>=0.117",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jim*"]

[tool.pytest.ini_options]
testpaths = ["jim/tests"]
